name:                fast-digits
version:             0.1.0.0
synopsis:            A fast library for number-to-digits conversion.
license:             GPL-3
license-file:        LICENSE
author:              Andrew Lelechenko
maintainer:          andrew.lelechenko@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.FastDigits
  build-depends:       base
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  build-depends:         base
                       , tasty
                       , tasty-quickcheck
                       , tasty-smallcheck
                       , QuickCheck
                       , smallcheck
                       , digits
                       , fast-digits
  hs-source-dirs:      tests
  default-language:    Haskell2010
  ghc-options:         -Wall

benchmark bench
  type:                exitcode-stdio-1.0
  main-is:             Bench.hs
  hs-source-dirs:      bench
  build-depends:         base
                       , criterion
                       , digits
                       , fast-digits
  default-language:    Haskell2010
  ghc-options:         -O2
