name:                fast-digits
version:             0.2.1.0
synopsis:            Integer-to-digits conversion.
description:         Convert an integer to digits and back.
                     This library is both asymptotically (O(n^1.4) vs. O(n^2))
                     and practically (2x-40x for typical inputs)
                     faster than "Data.Digits".
homepage:            https://github.com/Bodigrim/fast-digits
license:             GPL-3
license-file:        LICENSE
author:              Andrew Lelechenko
maintainer:          andrew.lelechenko@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git://github.com/Bodigrim/fast-digits.git

library
  exposed-modules:       Data.FastDigits
                       , Data.FastDigits.Internal
  build-depends:         base >=4.8 && < 5
                       , integer-gmp >=1.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  build-depends:         base
                       , tasty
                       , tasty-quickcheck
                       , tasty-smallcheck
                       , QuickCheck
                       , smallcheck
                       , digits
                       , fast-digits
  hs-source-dirs:      tests
  default-language:    Haskell2010
  ghc-options:         -Wall

benchmark bench
  type:                exitcode-stdio-1.0
  main-is:             Bench.hs
  hs-source-dirs:      bench
  build-depends:         base
                       , digits
                       , fast-digits
                       , gauge
  default-language:    Haskell2010
  ghc-options:         -O2
